<resources>
    <string name="app_name">TheGreatPlayer</string>
    <string name="genres">Genres</string>
    <string name="genres_text">Welcome! Below you can choose from the preset genres collection of the music styles that you could listen to, whenever you want!</string>
    <string name="playlist">Playlist</string>
    <string name="playing_now">Playing now</string>
    <string name="rock">Rock</string>
    <string name="rock_text">Hey! Here you can access the list of the particular songs set in the style you have previously chosen.</string>
    <string name="playing_text">Wow! This is the screen where you can access.</string>
    <string name="exact_time">2:36</string>
    <string name="full_time">4:16</string>
    <string name="headphones">headphones</string>
    <string name="playing_intro_text">Let\'s play!</string>
    <string name="playing_string_playing_now">Playing @string/playing_now</string>
    <string name="genres_icon">Genres Icon</string>
    <string name="playlist_icon">Playlist Icon</string>
</resources>
