<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.thegreatplayer.MainActivity"
    style="@style/main_constraint">

    <TextView
        android:id="@+id/genres"
        android:text="@string/genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title_textView" />

    <TextView
        android:id="@+id/intro_genres"
        android:text="@string/genres_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genres"
        style="@style/text_textView" />


    <GridView
        android:id="@+id/gridView"
        app:layout_constraintBottom_toTopOf="@id/constraints"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro_genres"
        style="@style/gridView" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView"
        app:layout_constraintVertical_bias="0.974"
        style="@style/botom_line_constraint">

        <ImageButton
            android:id="@+id/imageButton"
            app:layout_constraintEnd_toStartOf="@+id/imageButton2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_input_get"
            style="@style/genres_button_pushed" />

        <TextView
            android:id="@+id/textView3"
            android:text="@string/genres"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton"
            style="@style/genres_textView_pushed" />

        <ImageButton
            android:id="@+id/imageButton2"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_share"
            style="@style/playlist_button" />

        <ImageButton
            android:id="@+id/imageButton3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_media_play"
            style="@style/playing_button" />

        <TextView
            android:id="@+id/textView4"
            android:text="@string/playlist"
            app:layout_constraintEnd_toStartOf="@+id/imageButton3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            style="@style/playlist_textView" />

        <TextView
            android:id="@+id/textView5"
            android:text="@string/playing_now"
            app:layout_constraintEnd_toEndOf="@+id/imageButton3"
            app:layout_constraintStart_toStartOf="@+id/imageButton3"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3"
            style="@style/playing_textView" />
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
